# awesome-mobile-gui-agents

./: .gitignore  CONTRIBUTING.md  LICENSE  METHODOLOGY.md  PENDING.md  PENDING.zh-CN.md  README.md  README.zh-CN.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: suggest-agent.yml
.github/workflows/: refresh-metrics.yml  validate.yml
LICENSES/: CC-BY-4.0.txt  MIT.txt
data/: agents.yaml  notable.yaml  resources.yaml
schema/: agents.schema.json
scripts/: catalog.py
snapshots/: 2026-07-15.json
templates/: PENDING.md.j2  PENDING.zh-CN.md.j2  README.md.j2  README.zh-CN.md.j2
tests/: test_catalog.py
