[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "awesome-mobile-gui-agents-catalog"
version = "0.1.0"
description = "Validation, snapshot, and rendering tools for Awesome Mobile GUI Agents"
requires-python = ">=3.11"
dependencies = [
  "Jinja2>=3.1,<4",
  "jsonschema>=4.22,<5",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
py-modules = []
